--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -1,7 +1,8 @@
 # You can put your preferred keybinds here
 # https://wiki.hyprland.org/Configuring/Binds/
 
-# Caelestia
+# CAELESTIA 
+# ---
 exec = hyprctl dispatch submap global
 submap = global
 
@@ -17,6 +18,7 @@ bindin = Super, mouse_up, global, caelestia:launcherInterrupt
 bindin = Super, mouse_down, global, caelestia:launcherInterrupt
 bind = Super, Escape, global, caelestia:lock
 bind = Alt, Escape, global, caelestia:session
+bind = Alt, Space, global, caelestia:dashboard
 
 # Brightness
 bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
@@ -31,6 +33,7 @@ bindl = , XF86AudioNext, global, caelestia:mediaNext
 bindl = Ctrl+Super, Minus, global, caelestia:mediaPrev
 bindl = , XF86AudioPrev, global, caelestia:mediaPrev
 bindl = , XF86AudioStop, global, caelestia:mediaStop
+# ---
 
 # Session
 bind = Super, X, exec, hyprlock
@@ -110,6 +113,11 @@ bind=SUPERCTRL,o,togglespecialworkspace,hide
 
 # Windows
 bind = Alt, Q, killactive,
+bind = Super+Alt, Space, togglefloating,
+bind = Super+Alt, F, fullscreenstate, 0 3 # Toggle fake fullscreen
+bind = Super, F, fullscreen, 0
+bind = Super, D, fullscreen, 1
+
 # bind = Super+Shift, Left, movewindow, l # [hidden]
 # bind = Super+Shift, Right, movewindow, r # [hidden]
 # bind = Super+Shift, Up, movewindow, u # [hidden]
@@ -130,6 +138,7 @@ bind = Alt, Q, killactive,
 
 bind=CTRLSHIFT,h,movewindow,mon:0
 bind=CTRLSHIFT,l,movewindow,mon:1
+bind=SUPER,o,focusmonitor,+1
 
 binde = Super+Shift, equal, resizeactive, 10 0 # [hidden]
 binde = Super+Shift, minus, resizeactive, -10 0 # [hidden]
