--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -75,10 +75,10 @@ binde = Super, Equal, splitratio, +0.1 # [hidden]
 binde = Super, Semicolon, splitratio, -0.1 # [hidden]
 binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
 # Positioning mode
-bind = Super+Alt, Space, togglefloating,
-bind = Super+Alt, F, fullscreenstate, 0 3 # Toggle fake fullscreen
-bind = Super, F, fullscreen, 0
-bind = Super, D, fullscreen, 1
+# bind = Super+Alt, Space, togglefloating,
+# bind = Super+Alt, F, fullscreenstate, 0 3 # Toggle fake fullscreen
+# bind = Super, F, fullscreen, 0
+# bind = Super, D, fullscreen, 1
 
 #!
 ##! Workspace navigation
@@ -149,7 +149,7 @@ bind = Ctrl+Alt, Slash, exec, ags_end4 run-js 'cycleMode();' # Cycle bar mode (n
 bind = Super, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do ags_end4 -t "cheatsheet""$i"; done # Show cheatsheet
 # bind = Super, B, exec, ags_end4 -t 'sideleft' # Toggle left sidebar
 # bind = Super, A, exec, ags_end4 -t 'sideleft' # [hidden]
-bind = Super, O, exec, ags_end4 -t 'sideleft' # [hidden]
+# bind = Super, O, exec, ags_end4 -t 'sideleft' # [hidden]
 bind = Super, N, exec, ags_end4 -t 'sideright' # Toggle right sidebar
 bind = Super, M, exec, ags_end4 run-js 'openMusicControls.value = (!mpris.getPlayer() ? false : !openMusicControls.value);' # Toggle music controls
 bind = Super, Comma, exec, ags_end4 run-js 'openColorScheme.value = true; Utils.timeout(2000, () => openColorScheme.value = false);' # View color scheme and options
