--- a/.config/hypr/config/general.conf
+++ b/.config/hypr/config/general.conf
@@ -55,10 +55,10 @@ decoration {
         enabled = true
         ignore_window = true
         range=15
-        render_power=4
+        render_power=10
         offset=3 3
-        color= 0x8c000000
-        color_inactive=0x8c000000
+        color= 0x80000000
+        color_inactive=0x80000000
     }
     
     # Shader
