--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -17,7 +17,14 @@ general {
 #     on-resume = hyprctl dispatch dpms on
 # }
 #
+
 listener {
-    timeout = 600 # 10mins
-    on-timeout = $suspend_cmd
+    timeout = 300 # 10mins
+    on-timeout = $lock_cmd
 }
+
+# listener {
+#     timeout = 600 # 10mins
+#     on-timeout = $suspend_cmd
+# }
+
