--- a/.config/hypr/config/env.conf
+++ b/.config/hypr/config/env.conf
@@ -23,6 +23,7 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 # ######## Virtual envrionment #########
 env = XDG_STATE_HOME, $HOME/.local/state
 env = ILLOGICAL_IMPULSE_VIRTUAL_ENV, $XDG_STATE_HOME/ags/.venv
+env = PATH, $HOME/.local/bin:$PATH
 
 # ############ Others #############
 env = LIBVA_DRIVER_NAME,nvidia
