--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -3,19 +3,19 @@
 
 # CAELESTIA 
 # ---
-exec = hyprctl dispatch submap global
-submap = global
+# exec = hyprctl dispatch submap caelestia
+# submap = caelestia
 
 bind = Ctrl, Space, global, caelestia:launcher
-bindin = Super, catchall, global, caelestia:launcherInterrupt
-bindin = Super, mouse:272, global, caelestia:launcherInterrupt
-bindin = Super, mouse:273, global, caelestia:launcherInterrupt
-bindin = Super, mouse:274, global, caelestia:launcherInterrupt
-bindin = Super, mouse:275, global, caelestia:launcherInterrupt
-bindin = Super, mouse:276, global, caelestia:launcherInterrupt
-bindin = Super, mouse:277, global, caelestia:launcherInterrupt
-bindin = Super, mouse_up, global, caelestia:launcherInterrupt
-bindin = Super, mouse_down, global, caelestia:launcherInterrupt
+# bindin = Super, catchall, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:272, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:273, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:274, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:275, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:276, global, caelestia:launcherInterrupt
+# bindin = Super, mouse:277, global, caelestia:launcherInterrupt
+# bindin = Super, mouse_up, global, caelestia:launcherInterrupt
+# bindin = Super, mouse_down, global, caelestia:launcherInterrupt
 bind = Super, Escape, global, caelestia:lock
 bind = Alt, Escape, global, caelestia:session
 bind = Alt, Space, global, caelestia:dashboard
@@ -140,11 +140,20 @@ bind=CTRLSHIFT,h,movewindow,mon:0
 bind=CTRLSHIFT,l,movewindow,mon:1
 bind=SUPER,o,focusmonitor,+1
 
-binde = Super+Shift, equal, resizeactive, 10 0 # [hidden]
-binde = Super+Shift, minus, resizeactive, -10 0 # [hidden]
-binde = Super+Shift, bracketright, resizeactive, 0 10 # [hidden]
-binde = Super+Shift, bracketleft, resizeactive, 0 -10 # [hidden]
-bind = Super+Shift, Backslash, resizeactive, exact 60% 100% # [hidden]
+bind = Super, R, submap, resize
+submap = resize
+binde = , equal, resizeactive, 10 0
+binde = , minus, resizeactive, -10 0
+binde = Alt, equal, resizeactive, 0 10
+binde = Alt, minus, resizeactive, 0 -10
+# binde = , l, exec, ~/.local/bin/hypresize left
+# binde = , h, exec, ~/.local/bin/hypresize right
+# binde = , k, exec, ~/.local/bin/hypresize up
+# binde = , j, exec, ~/.local/bin/hypresize down
+bind = Alt, backslash, resizeactive, exact 60% 100% # [hidden]
+bind = Alt, equal, resizeactive, exact 50% 100% # [hidden]
+bind = , escape, submap, reset
+submap = reset
 
 # Groups
 bind=SUPER,G,togglegroup
@@ -158,3 +167,122 @@ bind=SHIFTALT,Right,moveintogroup,r
 bind=SHIFTALT,Down,moveintogroup,d
 bind=SHIFTALT,Up,moveintogroup,u
 bind=SHIFTALT,G,moveoutofgroup
+
+# Utilities
+bind=ALT,S,exec,grim -g "$(slurp)" - | wl-copy # Take screenshot and store in clipboard
+bind=SHIFTALT,S,exec,grim -g "$(slurp)" # Take screenshot and store in ~/Pictures
+
+# Lines ending with `# [hidden]` won't be shown on cheatsheet
+# Lines starting with #! are section headings
+
+bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
+bindl = Super ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
+# bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
+
+# Uncomment these if you can't get AGS to work
+#bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
+#bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
+
+#!
+##! Essentials for beginners
+
+bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
+bind = Ctrl+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell # [hidden]
+bind = Super+Shift, S, exec, ~/.config/ags/scripts/grimblast.sh --freeze copy area # Screen snip
+bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f - # Screen snip >> edit
+# OCR
+bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png" # Screen snip to text >> clipboard
+bind = Ctrl+Super+Shift,S,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png" # [hidden]
+# Color picker
+bind = Super+Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboard
+# Fullscreen screenshot
+bindl=,Print,exec,grim - | wl-copy # Screenshot >> clipboard
+bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/.config/ags/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
+bind = Ctrl+Shift+Alt+Super, Delete, exec, systemctl poweroff || loginctl poweroff # [hidden] Power off
+
+#!
+bind = Super, BracketLeft, movefocus, l # [hidden]
+bind = Super, BracketRight, movefocus, r # [hidden]
+bindm = Super, mouse:272, movewindow
+bindm = Super, mouse:273, resizewindow
+# bind = Super, Q, killactive,
+bind = Super+Shift+Alt, Q, exec, hyprctl kill # Pick and kill a window
+# Window split ratio
+#/# binde = Super, +/-,, # Window: split ratio +/- 0.1
+binde = Super, Minus, splitratio, -0.1 # [hidden]
+binde = Super, Equal, splitratio, +0.1 # [hidden]
+binde = Super, Semicolon, splitratio, -0.1 # [hidden]
+binde = Super, Apostrophe, splitratio, +0.1 # [hidden]
+
+bind = Ctrl+Super, Right, workspace, +1 # [hidden]
+bind = Ctrl+Super, Left, workspace, -1 # [hidden]
+#/# bind = Super, Scroll ↑/↓,, # Workspace: focus left/right
+bind = Super, mouse_up, workspace, +1 # [hidden]
+bind = Super, mouse_down, workspace, -1 # [hidden]
+bind = Ctrl+Super, mouse_up, workspace, +1 # [hidden]
+bind = Ctrl+Super, mouse_down, workspace, -1 # [hidden]
+#/# bind = Super, Page_↑/↓,, # Workspace: focus left/right
+bind = Super, Page_Down, workspace, +1 # [hidden]
+bind = Super, Page_Up, workspace, -1 # [hidden]
+bind = Ctrl+Super, Page_Down, workspace, +1 # [hidden]
+bind = Ctrl+Super, Page_Up, workspace, -1 # [hidden]
+## Special
+bind = Super, S, togglespecialworkspace,
+bind = Super, mouse:275, togglespecialworkspace,
+
+##! Workspace management
+
+bind = Ctrl+Super+Shift, Up, movetoworkspacesilent, special # [hidden]
+
+bind = Ctrl+Super+Shift, Right, movetoworkspace, +1 # [hidden]
+bind = Ctrl+Super+Shift, Left, movetoworkspace, -1 # [hidden]
+bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
+bind = Ctrl+Super, BracketRight, workspace, +1 # [hidden]
+bind = Ctrl+Super, Up, workspace, -5 # [hidden]
+bind = Ctrl+Super, Down, workspace, +5 # [hidden]
+#/# bind = Super+Shift, Scroll ↑/↓,, # Window: move to workspace left/right
+bind = Super+Shift, mouse_down, movetoworkspace, -1 # [hidden]
+bind = Super+Shift, mouse_up, movetoworkspace, +1 # [hidden]
+bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
+bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
+#/# bind = Super+Shift, Page_↑/↓,, # Window: move to workspace left/right
+bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
+bind = Super+Alt, Page_Up, movetoworkspace, -1 # [hidden]
+bind = Super+Shift, Page_Down, movetoworkspace, +1  # [hidden]
+bind = Super+Shift, Page_Up, movetoworkspace, -1  # [hidden]
+bind = Super+Alt, S, movetoworkspacesilent, special
+bind = Super, P, pin
+
+bind = Ctrl+Super, S, togglespecialworkspace, # [hidden]
+bind = Alt, Tab, cyclenext # [hidden] sus keybind
+bind = Alt, Tab, bringactivetotop, # [hidden] bring it to the top
+
+#!
+##! Widgets
+
+##! Media
+bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # Next track
+bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
+bindl= ,XF86AudioPrev, exec, playerctl previous # [hidden]
+bind = Super+Shift+Alt, mouse:275, exec, playerctl previous # [hidden]
+bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
+bindl= Super+Shift, B, exec, playerctl previous # Previous track
+bindl= Super+Shift, P, exec, playerctl play-pause # Play/pause media
+bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
+bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
+
+#!
+##! Apps
+bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center # Launch GNOME Settings
+bind = Ctrl+Super, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
+bind = Ctrl+Super+Shift, V, exec, easyeffects # Launch EasyEffects (equalizer & other audio effects)
+bind = Ctrl+Shift, Escape, exec, gnome-system-monitor # Launch GNOME System monitor
+bind = Ctrl+Super, Slash, exec, pkill anyrun || anyrun # Toggle fallback launcher: anyrun
+bind = Super+Alt, Slash, exec, pkill anyrun || fuzzel # Toggle fallback launcher: fuzzel
+
+# Cursed stuff
+## Make window not amogus large
+bind = Ctrl+Super, Backslash, resizeactive, exact 640 480 # [hidden]
