--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -142,16 +142,29 @@ bind=SUPER,o,focusmonitor,+1
 
 bind = Super, R, submap, resize
 submap = resize
-binde = , equal, resizeactive, 10 0
-binde = , minus, resizeactive, -10 0
-binde = Alt, equal, resizeactive, 0 10
-binde = Alt, minus, resizeactive, 0 -10
+binde = , equal, resizeactive, 50 0
+binde = , minus, resizeactive, -50 0
+binde = Alt, equal, resizeactive, 0 50
+binde = Alt, minus, resizeactive, 0 -50
+binde = , bracketright, resizeactive, 10 0
+binde = , bracketleft, resizeactive, -10 0
+binde = Alt, bracketright, resizeactive, 0 10
+binde = Alt, bracketleft, resizeactive, 0 -10
 # binde = , l, exec, ~/.local/bin/hypresize left
 # binde = , h, exec, ~/.local/bin/hypresize right
 # binde = , k, exec, ~/.local/bin/hypresize up
 # binde = , j, exec, ~/.local/bin/hypresize down
-bind = Alt, backslash, resizeactive, exact 60% 100% # [hidden]
-bind = Alt, equal, resizeactive, exact 50% 100% # [hidden]
+bind = super+shift, backslash, resizeactive, exact 60% 100% # [hidden]
+bind = super+shift, slash, resizeactive, exact 40% 100% # [hidden]
+bind = super+shift, equal, resizeactive, exact 50% 100% # [hidden]
+bind=SUPER,left,hy3:movefocus,l
+bind=SUPER,right,hy3:movefocus,r
+bind=SUPER,up,hy3:movefocus,u
+bind=SUPER,down,hy3:movefocus,d
+bind=SUPER,H,hy3:movefocus,l
+bind=SUPER,L,hy3:movefocus,r
+bind=SUPER,K,hy3:movefocus,u
+bind=SUPER,J,hy3:movefocus,d
 bind = , escape, submap, reset
 submap = reset
 
