--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -2,7 +2,7 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
-[manager]
+[mgr]
 
 keymap = [
 	{ on = [ "<Esc>" ], run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
@@ -308,78 +308,89 @@ keymap = [
 	{ on = [ "/" ], run = "filter", desc = "Apply a filter for the help items" },
 ]
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = [ "f","g" ]
 run  = "plugin fg"
 desc = "find file by content (fuzzy match)"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = [ "f","G" ]
 run  = "plugin fg 'rg'"
 desc = "find file by content (ripgrep match)"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = [ "f","f" ]
 run  = "plugin fg 'fzf'"
 desc = "find file by filename"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = [ "<C-s>" ]
 run  = 'shell --interactive "$SHELL" --block '
 desc = "Open shell here"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on  = [ "y" ]
 run = [ "yank", '''
 	shell --interactive 'for path in "$@"; do echo "file://$path"; done | wl-copy -t text/uri-list'
 ''' ]
 
-[[manager.prepend_keymap]]
-on = [ "u", "a" ]
-run = "plugin yamb save"
-desc = "Add bookmark"
+[[mgr.prepend_keymap]]
+desc = "Start bunny.yazi"
+on = ";"
+run = "plugin bunny"
 
-[[manager.prepend_keymap]]
-on = [ "u", "g" ]
-run = "plugin yamb jump_by_key"
-desc = "Jump bookmark by key"
+# Optionally, add another keymap to immediately fuzzy search bookmarks
+[[mgr.prepend_keymap]]
+desc = "Start bunny.yazi fuzzy search"
+on = "'"
+run = "plugin bunny fuzzy"
 
-[[manager.prepend_keymap]]
-on = [ "u", "G" ]
-run = "plugin yamb jump_by_fzf"
-desc = "Jump bookmark by fzf"
+# [[mgr.prepend_keymap]]
+# on = [ "u", "a" ]
+# run = "plugin yamb save"
+# desc = "Add bookmark"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "g" ]
+# run = "plugin yamb jump_by_key"
+# desc = "Jump bookmark by key"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "G" ]
+# run = "plugin yamb jump_by_fzf"
+# desc = "Jump bookmark by fzf"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "d" ]
+# run = "plugin yamb delete_by_key"
+# desc = "Delete bookmark by key"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "D" ]
+# run = "plugin yamb delete_by_fzf"
+# desc = "Delete bookmark by fzf"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "A" ]
+# run = "plugin yamb delete_all"
+# desc = "Delete all bookmarks"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "r" ]
+# run = "plugin yamb rename_by_key"
+# desc = "Rename bookmark by key"
+#
+# [[mgr.prepend_keymap]]
+# on = [ "u", "R" ]
+# run = "plugin yamb rename_by_fzf"
+# desc = "Rename bookmark by fzf"
 
-[[manager.prepend_keymap]]
-on = [ "u", "d" ]
-run = "plugin yamb delete_by_key"
-desc = "Delete bookmark by key"
-
-[[manager.prepend_keymap]]
-on = [ "u", "D" ]
-run = "plugin yamb delete_by_fzf"
-desc = "Delete bookmark by fzf"
-
-[[manager.prepend_keymap]]
-on = [ "u", "A" ]
-run = "plugin yamb delete_all"
-desc = "Delete all bookmarks"
-
-[[manager.prepend_keymap]]
-on = [ "u", "r" ]
-run = "plugin yamb rename_by_key"
-desc = "Rename bookmark by key"
-
-[[manager.prepend_keymap]]
-on = [ "u", "R" ]
-run = "plugin yamb rename_by_fzf"
-desc = "Rename bookmark by fzf"
-
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = "T"
 run  = "plugin max-preview"
 desc = "Maximize or restore preview"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on   = "O"
 run  = "plugin open-with-cmd block"
 desc = "Open with command in the terminal"
