--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -3,7 +3,7 @@ term=xterm-256color
 pad=10x10 center
 resize-by-cells=no
 
-font=FiraCode Nerd Font:size=10.5
+font=CaskaydiaCove NF:size=10.5
 font-italic=VictorMono Nerd Font:size=10.5:slant=italic
 font-bold-italic=VictorMono Nerd Font:size=10.5:weight=bold:slant=italic
 line-height=21px
