--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -53,10 +53,10 @@ window-padding-balance = true
 
 # Colors
 background = #1E1D2D
-theme = catppuccin-mocha
+theme = "Catppuccin Mocha"
 
 # Fonts
-font-family = "FiraCode Nerd Font"
+font-family = "CaskaydiaCove NF"
 font-family-italic = "VictorMono Nerd Font" 
 font-family-bold-italic = "VictorMono Nerd Font" 
 font-style = "Regular"
@@ -68,3 +68,4 @@ adjust-cell-height = 2
 adjust-cell-width = 0
 
 cursor-style = bar
+# async-backend = epoll
