--- a/.config/hypr/config/rules.conf
+++ b/.config/hypr/config/rules.conf
@@ -11,6 +11,7 @@ windowrule=float,title:^(Enter name of file to save to…)(.*)$
 windowrule = float, class:(blueberry.py)$
 windowrule = float, class:(steam)$
 windowrule = float, class:(guifetch)$ # FlafyDev/guifetch
+windowrulev2 = float,class:^(org.signal.Signal)$
 windowrule = tile, class:(com.mitchellh.ghostty)$ # FlafyDev/guifetch
 windowrulev2 = tile, class:(dev.warp.Warp)
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
