--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -44,7 +44,7 @@ bindle=, XF86AudioRaiseVolume, exec, ~/.local/bin/volume_up.sh # [hidden]
 bindle=, XF86AudioLowerVolume, exec, ~/.local/bin/volume_down.sh # [hidden]
 
 # Terminal
-bind=SUPER,RETURN,exec,ghostty
+bind=SUPER,RETURN,exec,kitty
 bind=SUPER,t,exec,foot
 
 # Launchers
