--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,19 +20,19 @@
 # The default values shown below rely on your OS to choose an appropriate monospace font family.
 # font_family      DejaVu Sans Mono for Powerline
 # font_family      FuraCode Nerd Font Mono 
-font_family	family="FiraCode Nerd Font" style=Light
-italic_font family="VictorMono Nerd Font" style=Italic
-bold_font  family="FiraCode Nerd Font" style=Regular
+font_family	family="CaskaydiaCove Nerd Font" style="Light"
+italic_font family="VictorMono Nerd Font" style="Italic"
+bold_font  family="CaskaydiaCove Nerd Font" style="Regular"
 bold_italic_font family="VictorMono Nerd Font" style="Bold Italic"
 
 # Font size (in pts)
-font_size        10.4
+font_size        10.5
 
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 font_size_delta 1
 modify_font cell_width 100%
-modify_font cell_height 110%
+modify_font cell_height 125%
 
 text_composition_strategy platform
 
