--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,4 +1,5 @@
 $lock_cmd = pidof hyprlock || hyprlock
+# $lock_cmd = hyprctl dispatch global quickshell:lock & pidof qs quickshell hyprlock || hyprlock
 $suspend_cmd = pidof steam || systemctl suspend || loginctl suspend # fuck nvidia
 
 general {
