--- a/.config/hypr/hyprland/colors.conf
+++ b/.config/hypr/hyprland/colors.conf
@@ -1,12 +1,10 @@
-# exec = export SLURP_ARGS='-d -c FFFFFFBB -b 00677D44 -s 00000000'
-
 general {
-    col.active_border = rgba(E0E2EF39)
-    col.inactive_border = rgba(8A90A530)
+    col.active_border = rgba(919191AA)
+    col.inactive_border = rgba(474747AA)
 }
 
 misc {
-    background_color = rgba(10131CFF)
+    background_color = rgba(131313FF)
 }
 
 plugin {
@@ -19,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(10131CFF)
-        col.text = rgba(E0E2EFFF)
+        bar_color = rgba(131313FF)
+        col.text = rgba(e2e2e2FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(E0E2EF), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(E0E2EF), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(E0E2EF), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(e2e2e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(e2e2e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(e2e2e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(59D5F8AA) rgba(59D5F877),pinned:1
+windowrulev2 = bordercolor rgba(b6c4ffAA) rgba(b6c4ff77),pinned:1
