--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -5,6 +5,12 @@ monitor=,preferred,auto-right,1
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
 
+gesture = 3, swipe, move,
+gesture = 4, horizontal, workspace
+gesture = 4, pinch, float
+gesture = 4, up, dispatcher, global, quickshell:overviewToggle
+gesture = 4, down, dispatcher, global, quickshell:overviewClose
+
 input {
     kb_layout=it
     kb_variant=us
@@ -31,9 +37,7 @@ binds {
 }
 
 gestures {
-    workspace_swipe = true
     workspace_swipe_distance = 700
-    workspace_swipe_fingers = 4
     workspace_swipe_cancel_ratio = 0.2
     workspace_swipe_min_speed_to_force = 5
     workspace_swipe_direction_lock = true
