--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,17 +20,19 @@
 # The default values shown below rely on your OS to choose an appropriate monospace font family.
 # font_family      DejaVu Sans Mono for Powerline
 # font_family      FuraCode Nerd Font Mono 
-font_family	     FiraCode Nerd Font
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family	family="CaskaydiaCove Nerd Font" style="Light"
+italic_font family="VictorMono Nerd Font" style="Italic"
+bold_font  family="CaskaydiaCove Nerd Font" style="Regular"
+bold_italic_font family="VictorMono Nerd Font" style="Bold Italic"
 
 # Font size (in pts)
-font_size        10.8
-text_composition_strategy legacy
+font_size        10.5
+# text_composition_strategy platform
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 font_size_delta 1
+modify_font cell_width 110%
+modify_font cell_height 125%
 
 # 0 disables it; -1 enables it
 confirm_os_window_close 0
@@ -40,8 +42,8 @@ confirm_os_window_close 0
 # (number followed by %), which are interpreted as percentages of the
 # unmodified values. You can use negative pixels or percentages less than
 # 100% to reduce sizes (but this might cause rendering artifacts).
-adjust_line_height 1
-adjust_column_width 0
+# adjust_line_height 2
+# adjust_column_width 0
 
 # Symbol mapping (special font for specified unicode code points). Map the
 # specified unicode codepoints to a particular font. Useful if you need special
@@ -61,13 +63,13 @@ adjust_column_width 0
 # These values are in pts. They will be scaled by the monitor DPI to arrive at
 # a pixel value. There must be four values corresponding to thin, normal, thick,
 # and very thick lines;
-box_drawing_scale 0.001, 1, 1.5, 2
+box_drawing_scale 0.001, 0.01, 1.0, 1.5
 # }}}
 
 
 # Cursor customization {{{
 # The cursor color
-cursor           #888888
+# cursor           #888888
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     block
@@ -101,7 +103,7 @@ wheel_scroll_multiplier 5.0
 # Mouse {{{
 # The color and style for highlighting URLs on mouse-over. url_style can be one of:
 # none, single, double, curly
-url_color #0087BD
+# url_color #0087BD
 url_style curly
 
 # The modifier keys to press when clicking with the mouse on URLs to open the URL
@@ -197,10 +199,10 @@ window_margin_width 0
 window_padding_width 10
 
 # The color for the border of the active window
-active_border_color #00ff00
+# active_border_color #00ff00
 
 # The color for the border of inactive windows
-inactive_border_color #cccccc
+# inactive_border_color #cccccc
 
 # Fade the text in inactive windows by the specified amount (a number between
 # zero and one, with 0 being fully faded).
@@ -216,23 +218,24 @@ tab_bar_edge bottom
 tab_separator " | "
 
 # Tab bar colors and styles
-active_tab_foreground #000
-active_tab_background #eee
+# active_tab_foreground #000
+# active_tab_background #eee
 active_tab_font_style bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 inactive_tab_font_style normal
 # }}}
 
 
 # Color scheme {{{
 # The foreground color
-foreground       #abb2bf
+# foreground       #CDD6F4
 
+include themes/mocha.conf
 # The background color
-background       #181825
+# background       #1E1E2E
 # background       #181c26
-# background #1E1E2E
+background #1E1E2E
 
 # The opacity of the background. A number between 0 and 1, where 1 is opaque and 0 is fully transparent.
 # This will only work if supported by the OS (for instance, when using a compositor under X11). Note
@@ -247,50 +250,50 @@ background       #181825
 background_opacity 1
 
 # The foreground for selections
-selection_foreground #f2201f
+# selection_foreground #f2201f
 
 # The background for selections
-selection_background #FFFACD
+# selection_background #FFFACD
 
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version. You can also set the remaining colors from the 256 color table
 # as color16 to color256.
 
 # black
-color0   #45475a
-color8   #585b70
+# color0   #45475a
+# color8   #585b70
 # color0   #233347
 # color8   #666666
 
 # red
-color1   #f38ba8
-color9   #f38ba8
+# color1   #f38ba8
+# color9   #f38ba8
 
 # green
-color2   #a6e3a1
-color10  #a6e3a1
+# color2   #a6e3a1
+# color10  #a6e3a1
 
 # yellow
-color3   #f9e2af
-color11  #f9e2af
+# color3   #f9e2af
+# color11  #f9e2af
 
 # blue
-color4  #89b4fa
-color12 #89b4fa
+# color4  #89b4fa
+# color12 #89b4fa
 # color4  #536878
 # color12 #536878
 
 # magenta
-color5   #cba6f7
-color13  #cba6f7
+# color5   #cba6f7
+# color13  #cba6f7
 
 # cyan
-color6   #fab387
-color14  #fab387
+# color6   #fab387
+# color14  #fab387
 
 # white
-color7   #cdd6f4
-color15  #bac2de
+# color7   #cdd6f4
+# color15  #bac2de
 # color7   #EBDBB2
 # color15  #EBDBB2
 # }}}
@@ -509,7 +512,7 @@ clear_all_shortcuts no
 # means to use the default system color, a value of "background" means to use
 # the default background color and finally you can use an arbitrary color, such
 # as #12af59 or "red".
-macos_titlebar_color system
+# macos_titlebar_color system
 
 # Hide the kitty window's title bar on macOS.
 macos_hide_titlebar no
@@ -524,3 +527,8 @@ macos_option_as_alt yes
 macos_hide_from_tasks no
 # }}}
 
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+# END_KITTY_THEME
