--- a/.config/hypr/config/plugins.conf
+++ b/.config/hypr/config/plugins.conf
@@ -33,7 +33,9 @@ plugin {
   hy3 {
       group_inset = 0
       tabs {
-      height = 20
+        height = 5
+        render_text = false
+        padding = 2
       }
     }
   }
