--- a/.config/noctalia/settings.json
+++ b/.config/noctalia/settings.json
@@ -101,6 +101,10 @@
                     "showUnreadBadge": true
                 },
                 {
+                    "displayMode": "onhover",
+                    "id": "WiFi"
+                },
+                {
                     "diskPath": "/",
                     "id": "SystemMonitor",
                     "showCpuTemp": true,
