--- a/.config/hypr/config/general.conf
+++ b/.config/hypr/config/general.conf
@@ -1,8 +1,50 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
+monitor=,preferred,auto-right,1
+
+gesture = 3, swipe, move,
+gesture = 4, horizontal, workspace
+gesture = 4, pinch, float
+gesture = 4, up, dispatcher, global, quickshell:overviewToggle
+gesture = 4, down, dispatcher, global, quickshell:overviewClose
+
+input {
+    kb_layout=it
+    kb_variant=us
+    kb_model=
+    kb_options=
+    kb_rules=
+
+    follow_mouse=1
+    sensitivity=0.3
+    accel_profile=adaptive
+
+    scroll_method = on_button_down
+    scroll_button = 274
+    scroll_factor = 1.0
+
+    touchpad {
+        natural_scroll=no
+    }
+}
+
+binds {
+    # focus_window_on_workspace_c# For Auto-run stuff see execs.confhange = true
+    scroll_event_delay = 0
+}
+
+gestures {
+    workspace_swipe_distance = 700
+    workspace_swipe_cancel_ratio = 0.2
+    workspace_swipe_min_speed_to_force = 5
+    workspace_swipe_direction_lock = true
+    workspace_swipe_direction_lock_threshold = 10
+    workspace_swipe_create_new = true
+}
+
 
 general {
-    layout=hy3
+    layout=master
     # Gaps and border
     gaps_in = 5
     gaps_out = 10
@@ -72,7 +114,7 @@ decoration {
 }
 
 master {
-    mfact=0.65    
+    mfact=0.5    
     new_status=inherit
     new_on_top=false
 }
@@ -81,6 +123,58 @@ dwindle {
     pseudotile=1 # enable pseudotiling on dwindle
     force_split=2
     default_split_ratio=1.2
+}
+
+animations {
+    enabled = true
+    # Animation curves
+    
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.38, 0.04, 1, 0.07
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+    # Animation configs
+    animation = windows, 1, 3, md3_decel, popin 60%
+    animation = windowsIn, 1, 3, md3_decel, popin 60%
+    animation = windowsOut, 1, 3, md3_accel, popin 60%
+    animation = border, 1, 10, default
+    animation = fade, 1, 3, md3_decel
+    # animation = layers, 1, 2, md3_decel, slide
+    animation = layersIn, 1, 3, menu_decel, slide
+    animation = layersOut, 1, 1.6, menu_accel
+    animation = fadeLayersIn, 1, 2, menu_decel
+    animation = fadeLayersOut, 1, 4.5, menu_accel
+    animation = workspaces, 1, 7, menu_decel, slide
+    # animation = workspaces, 1, 2.5, softAcDecel, slide
+    # animation = workspaces, 1, 7, menu_decel, slidefade 15%
+    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+}
+
+misc {
+    vfr = 1
+    vrr = 1
+    animate_manual_resizes = false
+    animate_mouse_windowdragging = false
+    enable_swallow = false
+    swallow_regex = (foot|kitty|allacritty|Alacritty)
+    
+    disable_hyprland_logo = true
+    force_default_wallpaper = 0
+    new_window_takes_over_fullscreen = 2
+    allow_session_lock_restore = true
+    
+    initial_workspace_tracking = false
 }
 
 # Workspaces
