--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -27,7 +27,7 @@ bindit = ,Super_R, global, quickshell:workspaceNumber # [hidden]
 
 # NOCTALIA
 bind = Ctrl, Space, exec, qs -c noctalia-shell ipc call launcher toggle
-bind = Super, Super_L, exec, qs -c noctalia-shell ipc call controlCenter toggle
+bind = Super, Escape, exec, qs -c noctalia-shell ipc call controlCenter toggle
 bind = Alt, Escape, exec,	qs -c noctalia-shell ipc call sessionMenu toggle
 bind = Ctrl+Super, Space, exec,	qs -c noctalia-shell ipc call media playPause
 
@@ -50,8 +50,8 @@ bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcom
 
 bindle=, XF86MonBrightnessUp, exec, qs -c $qsConfig ipc call brightness increment || brightnessctl s 5%+ # [hidden]
 bindle=, XF86MonBrightnessDown, exec, qs -c $qsConfig ipc call brightness decrement || brightnessctl s 5%- # [hidden]
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+ # [hidden]
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%- # [hidden]
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
 
 bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
 bindld = Super+Shift,M, Toggle mute, exec, wpctl set-mute @DEFAULT_SINK@ toggle # [hidden]
@@ -130,23 +130,23 @@ bind=SUPERCTRL,o,togglespecialworkspace,hide
 
 # Windows
 bind = Alt, Q, killactive,
-# bind = Super+Shift, Left, movewindow, l # [hidden]
-# bind = Super+Shift, Right, movewindow, r # [hidden]
-# bind = Super+Shift, Up, movewindow, u # [hidden]
-# bind = Super+Shift, Down, movewindow, d # [hidden]
-# bind = Super+Shift, h, movewindow, l # [hidden]
-# bind = Super+Shift, l, movewindow, r # [hidden]
-# bind = Super+Shift, k, movewindow, u # [hidden]
-# bind = Super+Shift, j, movewindow, d # [hidden]
-#
-# bind=SUPER,left,movefocus,l
-# bind=SUPER,right,movefocus,r
-# bind=SUPER,up,movefocus,u
-# bind=SUPER,down,movefocus,d
-# bind=SUPER,H,movefocus,l
-# bind=SUPER,L,movefocus,r
-# bind=SUPER,K,movefocus,u
-# bind=SUPER,J,movefocus,d
+bind = Super+Shift, Left, movewindow, l # [hidden]
+bind = Super+Shift, Right, movewindow, r # [hidden]
+bind = Super+Shift, Up, movewindow, u # [hidden]
+bind = Super+Shift, Down, movewindow, d # [hidden]
+bind = Super+Shift, h, movewindow, l # [hidden]
+bind = Super+Shift, l, movewindow, r # [hidden]
+bind = Super+Shift, k, movewindow, u # [hidden]
+bind = Super+Shift, j, movewindow, d # [hidden]
+
+bind=SUPER,left,movefocus,l
+bind=SUPER,right,movefocus,r
+bind=SUPER,up,movefocus,u
+bind=SUPER,down,movefocus,d
+bind=SUPER,H,movefocus,l
+bind=SUPER,L,movefocus,r
+bind=SUPER,K,movefocus,u
+bind=SUPER,J,movefocus,d
 
 bind=CTRLSHIFT,h,movewindow,mon:0
 bind=CTRLSHIFT,l,movewindow,mon:1
