--- a/.config/noctalia/settings.json
+++ b/.config/noctalia/settings.json
@@ -20,7 +20,7 @@
         "preferredPlayer": "",
         "visualizerQuality": "high",
         "visualizerType": "wave",
-        "volumeOverdrive": false,
+        "volumeOverdrive": true,
         "volumeStep": 5
     },
     "bar": {
