--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $qsConfig = ii
 # Defaults
 # source=~/.config/hypr/hyprland/env.conf
 source=~/.config/hypr/hyprland/execs.conf
-source=~/.config/hypr/hyprland/general.conf
+# source=~/.config/hypr/hyprland/general.conf
 # source=~/.config/hypr/hyprland/rules.conf
 source=~/.config/hypr/hyprland/colors.conf
 # source=~/.config/hypr/hyprland/keybinds.conf
@@ -17,7 +17,7 @@ source=~/.config/hypr/config/execs.conf
 source=~/.config/hypr/config/general.conf
 source=~/.config/hypr/config/rules.conf
 source=~/.config/hypr/config/keybinds.conf
-source=~/.config/hypr/config/plugins.conf
+# source=~/.config/hypr/config/plugins.conf
 
 # nwg-displays support
 source=workspaces.conf
