--- a/.config/alacritty/dank-theme.toml
+++ b/.config/alacritty/dank-theme.toml
@@ -4,20 +4,20 @@ foreground = '#e2e2e2'
 
 [colors.selection]
 text = '#e2e2e2'
-background = '#1e438f'
+background = '#16448f'
 
 [colors.cursor]
 text = '#131313'
-cursor = '#b2c5ff'
+cursor = '#afc6ff'
 
 [colors.normal]
 black   = '#131313'
 red     = '#e54d45'
-green   = '#6ed66e'
+green   = '#6fd66e'
 yellow  = '#dbd37b'
-blue    = '#657cd5'
-magenta = '#919cbf'
-cyan    = '#b2c5ff'
+blue    = '#617ed1'
+magenta = '#8f9dbf'
+cyan    = '#afc6ff'
 white   = '#abb2bf'
 
 [colors.bright]
@@ -25,7 +25,7 @@ black   = '#5c6370'
 red     = '#e0615f'
 green   = '#86e086'
 yellow  = '#e8e197'
-blue    = '#bed3ff'
-magenta = '#567ab1'
-cyan    = '#6d73b5'
+blue    = '#bbd4ff'
+magenta = '#547baf'
+cyan    = '#6c75b4'
 white   = '#ffffff'
