--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -21,24 +21,34 @@
 # bind = Alt, Space, global, caelestia:dashboard
 
 # NOCTALIA
-bind = Ctrl, Space, exec, qs -c noctalia-shell ipc call launcher toggle
-bind = Super, Super_L, exec, qs -c noctalia-shell ipc call controlCenter toggle
-bind = Alt, Escape, exec,	qs -c noctalia-shell ipc call sessionMenu toggle
-bind = Ctrl+Super, Space, exec,	qs -c noctalia-shell ipc call media playPause
+# bind = Ctrl, Space, exec, qs -c noctalia-shell ipc call launcher toggle
+# bind = Super, Super_L, exec, qs -c noctalia-shell ipc call controlCenter toggle
+# bind = Alt, Escape, exec,	qs -c noctalia-shell ipc call sessionMenu toggle
+# bind = Ctrl+Super, Space, exec,	qs -c noctalia-shell ipc call media playPause
+
+# DANK MATERLIA SHELL
+bind = Ctrl,Space, exec, dms ipc call spotlight toggle
+bind = Mod,Escape, exec, spawn-sh dms ipc call control-center toggle
+bind = Ctrl,Alt,Delete, exec, spawn-sh dms ipc call powermenu toggle 
+bind = Ctrl,Alt,Space, exec, spawn-sh dms ipc call lock lock
+bind = Mod,Ctrl,Space, exec, spawn-sh dms ipc call mpris playPause 
+bind = , XF86AudioPlay, exec, spawn-sh dms ipc call mpris playPause 
+bind = , XF86AudioNext, exec, spawn-sh dms ipc call mpris next
+bind = , XF86AudioPrev, exec, spawn-sh dms ipc call mpris previous
 
 # Brightness
-bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
-bindl = , XF86MonBrightnessDown, global, caelestia:brightnessDown
+# bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
+# bindl = , XF86MonBrightnessDown, global, caelestia:brightnessDown
 
 # Media
 # bindl = Ctrl+Super, Space, global, caelestia:mediaToggle
-bindl = , XF86AudioPlay, global, caelestia:mediaToggle
-bindl = , XF86AudioPause, global, caelestia:mediaToggle
-bindl = Ctrl+Super, Equal, global, caelestia:mediaNext
-bindl = , XF86AudioNext, global, caelestia:mediaNext
-bindl = Ctrl+Super, Minus, global, caelestia:mediaPrev
-bindl = , XF86AudioPrev, global, caelestia:mediaPrev
-bindl = , XF86AudioStop, global, caelestia:mediaStop
+# bindl = , XF86AudioPlay, global, caelestia:mediaToggle
+# bindl = , XF86AudioPause, global, caelestia:mediaToggle
+# bindl = Ctrl+Super, Equal, global, caelestia:mediaNext
+# bindl = , XF86AudioNext, global, caelestia:mediaNext
+# bindl = Ctrl+Super, Minus, global, caelestia:mediaPrev
+# bindl = , XF86AudioPrev, global, caelestia:mediaPrev
+# bindl = , XF86AudioStop, global, caelestia:mediaStop
 # ---
 
 # Session
