--- a/.config/kitty/dank-tabs.conf
+++ b/.config/kitty/dank-tabs.conf
@@ -9,8 +9,8 @@ tab_bar_margin_color    #131313
 
 tab_bar_background              #131313
 
-active_tab_foreground           #dae2ff
-active_tab_background           #1e438f
+active_tab_foreground           #d9e2ff
+active_tab_background           #16448f
 active_tab_font_style           bold
 
 inactive_tab_foreground         #c6c6c6
