--- a/.config/kitty/dank-theme.conf
+++ b/.config/kitty/dank-theme.conf
@@ -3,22 +3,22 @@ cursor_text_color #c6c6c6
 
 foreground            #e2e2e2
 background            #131313
-selection_foreground  #2a3042
-selection_background  #c0c6dd
-url_color             #b2c5ff
+selection_foreground  #293042
+selection_background  #bfc6dc
+url_color             #afc6ff
 color0   #131313
 color1   #e54d45
-color2   #6ed66e
+color2   #6fd66e
 color3   #dbd37b
-color4   #657cd5
-color5   #919cbf
-color6   #b2c5ff
+color4   #617ed1
+color5   #8f9dbf
+color6   #afc6ff
 color7   #abb2bf
 color8   #5c6370
 color9   #e0615f
 color10   #86e086
 color11   #e8e197
-color12   #bed3ff
-color13   #567ab1
-color14   #6d73b5
+color12   #bbd4ff
+color13   #547baf
+color14   #6c75b4
 color15   #ffffff
