--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -11,25 +11,35 @@
 # bind = Super, Super_L, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
 # bind = Super, Super_R, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || fuzzel # [hidden] Launcher (fallback)
 # binditn = Super, catchall, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Ctrl, Super_L, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Ctrl, Super_R, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:272, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:273, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:274, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:275, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:276, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse:277, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse_up,  global, quickshell:overviewToggleReleaseInterrupt # [hidden]
-bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Ctrl, Super_L, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Ctrl, Super_R, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:272, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:273, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:274, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:275, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:276, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse:277, global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse_up,  global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+# bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hidden]
+#
+# bindit = ,Super_L, global, quickshell:workspaceNumber # [hidden]
+# bindit = ,Super_R, global, quickshell:workspaceNumber # [hidden]
+#
+# # NOCTALIA
+# bind = Ctrl, Space, exec, qs -c noctalia-shell ipc call launcher toggle
+# bind = Super, Escape, exec, qs -c noctalia-shell ipc call controlCenter toggle
+# bind = Alt, Escape, exec,	qs -c noctalia-shell ipc call sessionMenu toggle
+# bind = Ctrl+Super, Space, exec,	qs -c noctalia-shell ipc call media playPause
 
-bindit = ,Super_L, global, quickshell:workspaceNumber # [hidden]
-bindit = ,Super_R, global, quickshell:workspaceNumber # [hidden]
-
-# NOCTALIA
-bind = Ctrl, Space, exec, qs -c noctalia-shell ipc call launcher toggle
-bind = Super, Escape, exec, qs -c noctalia-shell ipc call controlCenter toggle
-bind = Alt, Escape, exec,	qs -c noctalia-shell ipc call sessionMenu toggle
-bind = Ctrl+Super, Space, exec,	qs -c noctalia-shell ipc call media playPause
+# DANK MATERIAL SHELL
+bind = Ctrl,Space, exec, dms ipc call spotlight toggle
+bind = Super,Escape, exec, dms ipc call control-center toggle
+bind = Ctrl+Alt,Delete, exec, dms ipc call powermenu toggle 
+bind = Ctrl+Alt,Space, exec, dms ipc call lock lock
+bind = Super+Ctrl,Space, exec, dms ipc call mpris playPause 
+bind = , XF86AudioPlay, exec, dms ipc call mpris playPause 
+bind = , XF86AudioNext, exec, dms ipc call mpris next
+bind = , XF86AudioPrev, exec, dms ipc call mpris previous
 
 # bindd = Super, V, Clipboard history >> clipboard, global, quickshell:overviewClipboardToggle # Clipboard history >> clipboard
 bindd = Super, Period, Emoji >> clipboard, global, quickshell:overviewEmojiToggle # Emoji >> clipboard
