--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ source=~/.config/hypr/config/execs.conf
 source=~/.config/hypr/config/general.conf
 source=~/.config/hypr/config/rules.conf
 source=~/.config/hypr/config/keybinds.conf
-# source=~/.config/hypr/config/plugins.conf
+source=~/.config/hypr/config/plugins.conf
 
 # nwg-displays support
 source=workspaces.conf
