--- a/.config/noctalia/settings.json
+++ b/.config/noctalia/settings.json
@@ -105,6 +105,11 @@
                     "id": "WiFi"
                 },
                 {
+                    "displayMode": "onhover",
+                    "id": "Battery",
+                    "warningThreshold": 30
+                },
+                {
                     "diskPath": "/",
                     "id": "SystemMonitor",
                     "showCpuTemp": true,
