--- a/.config/hypr/config/general.conf
+++ b/.config/hypr/config/general.conf
@@ -20,6 +20,17 @@ general {
     allow_tearing = true # This just allows the `immediate` window rule to work
 }
 
+envornment {
+    # GTK_THEME "Matcha-dark-azul"
+    QT_QPA_PLATFORM "wayland"
+    XDG_CURRENT_DESKTOP "gnome"
+    XDG_SESSION_TYPE "wayland"
+    QT_QPA_PLATFORM "wayland"
+    MOZ_ENABLE_WAYLAND "1"
+    QT_WAYLAND_DISABLE_WINDOWDECORATION "1"
+    ELECTRON_OZONE_PLATFORM_HINT "auto"
+}
+
 group {
     # col.border=0x00555555
     col.border_active=0x00888888
