--- a/.config/foot/dank-colors.ini
+++ b/.config/foot/dank-colors.ini
@@ -2,21 +2,24 @@
 foreground=e2e2e2
 background=131313
 selection-foreground=e2e2e2
-selection-background=16448f
+selection-background=393d8f
+cursor = 131313 bfc2ff
 
 regular0=131313
-regular1=e54d45
-regular2=6fd66e
-regular3=dbd37b
-regular4=617ed1
-regular5=8f9dbf
-regular6=afc6ff
+regular1=e44f44
+regular2=6ed670
+regular3=dbd57b
+regular4=7775e6
+regular5=989abf
+regular6=bfc2ff
 regular7=abb2bf
 bright0=5c6370
-bright1=e0615f
-bright2=86e086
-bright3=e8e197
-bright4=bbd4ff
-bright5=547baf
-bright6=6c75b4
+bright1=e0645f
+bright2=86e088
+bright3=e8e397
+bright4=cccfff
+bright5=6575c0
+bright6=7870bc
 bright7=ffffff
+
+dim-blend-towards=black
