--- a/.config/kitty/dank-tabs.conf
+++ b/.config/kitty/dank-tabs.conf
@@ -9,8 +9,8 @@ tab_bar_margin_color    #131313
 
 tab_bar_background              #131313
 
-active_tab_foreground           #d9e2ff
-active_tab_background           #16448f
+active_tab_foreground           #212578
+active_tab_background           #bfc2ff
 active_tab_font_style           bold
 
 inactive_tab_foreground         #c6c6c6
@@ -18,7 +18,6 @@ inactive_tab_background         #131313
 inactive_tab_font_style         normal
 
 tab_activity_symbol             " ● "
-tab_numbers_style               1
 
 tab_title_template              "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title[:30]}{title[30:] and '…'} [{index}]"
 active_tab_title_template       "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title[:30]}{title[30:] and '…'} [{index}]"
