--- a/.config/kitty/dank-theme.conf
+++ b/.config/kitty/dank-theme.conf
@@ -3,22 +3,23 @@ cursor_text_color #c6c6c6
 
 foreground            #e2e2e2
 background            #131313
-selection_foreground  #293042
-selection_background  #bfc6dc
-url_color             #afc6ff
+selection_foreground  #2e2f42
+selection_background  #c5c4dd
+url_color             #bfc2ff
+
 color0   #131313
-color1   #e54d45
-color2   #6fd66e
-color3   #dbd37b
-color4   #617ed1
-color5   #8f9dbf
-color6   #afc6ff
+color1   #e44f44
+color2   #6ed670
+color3   #dbd57b
+color4   #7775e6
+color5   #989abf
+color6   #bfc2ff
 color7   #abb2bf
 color8   #5c6370
-color9   #e0615f
-color10   #86e086
-color11   #e8e197
-color12   #bbd4ff
-color13   #547baf
-color14   #6c75b4
-color15   #ffffff
+color9   #e0645f
+color10  #86e088
+color11  #e8e397
+color12  #cccfff
+color13  #6575c0
+color14  #7870bc
+color15  #ffffff
