--- a/.config/foot/dank-colors.ini
+++ b/.config/foot/dank-colors.ini
@@ -2,24 +2,24 @@
 foreground=e2e2e2
 background=131313
 selection-foreground=e2e2e2
-selection-background=393d8f
-cursor = 131313 bfc2ff
+selection-background=254190
+cursor = 131313 b5c4ff
 
 regular0=131313
-regular1=e44f44
-regular2=6ed670
-regular3=dbd57b
-regular4=7775e6
-regular5=989abf
-regular6=bfc2ff
+regular1=e44e45
+regular2=6ed66f
+regular3=dbd47b
+regular4=6a7bda
+regular5=929bbf
+regular6=b5c4ff
 regular7=abb2bf
 bright0=5c6370
-bright1=e0645f
-bright2=86e088
-bright3=e8e397
-bright4=cccfff
-bright5=6575c0
-bright6=7870bc
+bright1=e0625f
+bright2=86e086
+bright3=e8e297
+bright4=c2d2ff
+bright5=5978b4
+bright6=7172b9
 bright7=ffffff
 
 dim-blend-towards=black
