--- a/.config/hypr/dms/colors.conf
+++ b/.config/hypr/dms/colors.conf
@@ -1,7 +1,7 @@
 # ! Auto-generated file. Do not edit directly.
 # Remove source = ./dms/colors.conf from your config to override.
 
-$primary  = rgb(bfc2ff)
+$primary  = rgb(acc7ff)
 $outline  = rgb(919191)
 $error    = rgb(ffb4ab)
 
