--- a/.config/kitty/dank-theme.conf
+++ b/.config/kitty/dank-theme.conf
@@ -3,23 +3,23 @@ cursor_text_color #c6c6c6
 
 foreground            #e2e2e2
 background            #131313
-selection_foreground  #2e2f42
-selection_background  #c5c4dd
-url_color             #bfc2ff
+selection_foreground  #2b3042
+selection_background  #c1c5dd
+url_color             #b5c4ff
 
 color0   #131313
-color1   #e44f44
-color2   #6ed670
-color3   #dbd57b
-color4   #7775e6
-color5   #989abf
-color6   #bfc2ff
+color1   #e44e45
+color2   #6ed66f
+color3   #dbd47b
+color4   #6a7bda
+color5   #929bbf
+color6   #b5c4ff
 color7   #abb2bf
 color8   #5c6370
-color9   #e0645f
-color10  #86e088
-color11  #e8e397
-color12  #cccfff
-color13  #6575c0
-color14  #7870bc
+color9   #e0625f
+color10  #86e086
+color11  #e8e297
+color12  #c2d2ff
+color13  #5978b4
+color14  #7172b9
 color15  #ffffff
